[tool.poetry]
name = "cfavorita"
version = "0.1.0"
description = ""
authors = ["ivallesp <ivanvallesperez@gmail.com>"]

[tool.poetry.dependencies]
python = "=3.6.9"
numpy = "=1.16.2"
pandas = "=0.24.2"
kaggle = "=1.5.3"
torch = { file = "/root/torch-1.4.0a0+e42af97-cp36-cp36m-linux_x86_64.whl" }
torchvision = { file = "/root/torchvision-0.5.0a0+44a5bae-cp36-cp36m-linux_x86_64.whl" }
matplotlib = "^3.1"
tensorboardX = "^1.9"
wandb = "^0.8.14"

[tool.poetry.dev-dependencies]
black = {version = "^18.3-alpha.0", allows-prereleases = true}
flake8 = "^3.7"
ipython = "^7.8"
ipykernel = "^5.1"

[custom]
alias = "classic_seq2seq"
cuda = true
sample = false
random_seed = 655321
batch_size = 128
forecast_horizon = 15
learning_rate = 0.0001
