[tool.poetry]
name = "cfavorita"
version = "0.1.0"
description = ""
authors = ["ivallesp <ivanvallesperez@gmail.com>"]

[tool.poetry.dependencies]
python = "=3.6.9"
numpy = "=1.16.2"
pandas = "=0.24.2"
kaggle = "=1.5.3"
matplotlib = "^3.1"
tensorboardX = "=1.9"
wandb = "^0.8.14"
torch = "^1.3"
torchvision = "^0.4.2"
scikit-learn = "^0.23.2"

[tool.poetry.dev-dependencies]
black = {version = "^18.3-alpha.0", allows-prereleases = true}
flake8 = "^3.7"
ipython = "^7.8"
ipykernel = "^5.1"

[custom]
alias = "recurrent_seq2seq_v1.0"
cuda = true
sample = false
random_seed = 655321
batch_size = 128
forecast_horizon = 16
learning_rate = 0.0001
n_threads = 8
